# plasmoid-knightscoutmonitor

./: CMakeLists.txt  README.md
package/: metadata.desktop
package/contents/code/: nightscout.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: ChartView.qml  CompactRepresentation.qml  GlucoseChart.qml  main.qml
package/contents/ui/config/: general.qml
